# 20201-POSIX-Threads

./: .gitmodules  README.md
01/src/: main.c
03/: meson.build
03/src/: main.c
04/: meson.build
06/: meson.build
08/: native-x86-i686.ini
10/src/: main.c
11/src/: main.c
14/: meson.build
17/: meson.build
17/src/: error.h
23/src/: main.c
24/src/: main.c
28/src/: main.c
29/src/: io.c
a.ivanov/1-2/: compile.sh  lab1.c  lab2  lab2.c
a.ivanov/11/: compile.sh  main.c
a.ivanov/23/: compile.sh  main.c  strings.c
a.ivanov/3/: compile.sh  main.c  questions
a.ivanov/31/: cache.h  compile.sh  http_io.cpp  http_io.h  io_operations.cpp  io_operations.h  main.cpp  make.sh  map_cache.h  proxy.h  select_data.h  single_thread_proxy.cpp  single_thread_proxy.h  socket_operations.cpp  status_code.h
a.ivanov/33/: make.sh
a.ivanov/4-5/: compile.sh  main.c
a.ivanov/6/: compile.sh  main.c  strings.h  text
a.ivanov/7/: compile.sh  main.c
a.ivanov/8/: compile8.sh  compile9.sh  lab8.c  lab9.c
a.ivanov15/23/: linked_list.c  linked_list.h  main.c  thread_safe_list.c  thread_safe_list.h
a.yanin/01/: meson.build
a.yanin/02/: meson.build
a.yanin/03/: meson.build
a.yanin/04/: meson.build
a.yanin/05/: meson.build
a.yanin/06/: meson.build
a.yanin/08/: meson.build
a.yanin/09/: meson.build
a.yanin/10/: meson.build
a.yanin/10/src/: error.c  error.h
a.yanin/11/: meson.build
a.yanin/14/: meson.build
a.yanin/17/: meson.build
a.yanin/23/: meson.build
a.yanin/24/: meson.build
a.yanin/26/: meson.build
a.yanin/28/: meson.build
a.yanin/29/: meson.build
a.yanin/common/: meson.build  meson_options.txt
a.yanin/common/collections/: meson.build
a.yanin/common/collections.dlist/: meson.build
a.yanin/common/collections.dlist/include/common/collections/: dlist.h
a.yanin/common/collections.hash/: meson.build
a.yanin/common/collections.hash/include/collections/: hash.h
a.yanin/common/collections.hash/include/common/collections/: hash.h
a.yanin/common/collections.hash/include/common/collections/hash/: byte_hasher.h
a.yanin/common/collections.hash/src/: byte_hasher.c
a.yanin/common/collections.slab/: meson.build
a.yanin/common/collections.slab/include/collections/: slab.h
a.yanin/common/collections.string/: meson.build
a.yanin/common/collections.string/include/common/collections/: string.h
a.yanin/common/collections.string/src/: string.c
a.yanin/common/collections.vec/: meson.build
a.yanin/common/collections.vec/include/common/collections/: vec.h
a.yanin/common/config/: meson.build
a.yanin/common/config/include/common/: meson.build
a.yanin/common/error/: meson.build
a.yanin/common/error-codes/: meson.build
a.yanin/common/error-codes.adapter/: meson.build
a.yanin/common/error-codes.adapter/include/common/error-codes/: adapter.h
a.yanin/common/error-codes.adapter/src/: adapter.c
a.yanin/common/error-codes.display/: meson.build
a.yanin/common/error-codes.display/include/common/error-codes/: display.h
a.yanin/common/error-codes.display/src/: display.c
a.yanin/common/error-codes/include/common/error-codes/: error-codes.h  macros.h
a.yanin/common/error.display/: meson.build
a.yanin/common/error.display/include/common/error/: display.h
a.yanin/common/error.display/src/: display.c
a.yanin/common/error/include/common/: error.h
a.yanin/common/error/include/common/error/: macros.h
a.yanin/common/error/src/: backtrace.c  error.c  format.c
a.yanin/common/executor/: meson.build
a.yanin/common/executor.single/: meson.build
a.yanin/common/executor.single/include/common/executor/: single.h
a.yanin/common/executor.single/src/: single.c
a.yanin/common/executor.thread-pool/: meson.build
a.yanin/common/executor.thread-pool/include/common/executor/: thread-pool.h
a.yanin/common/executor.thread-pool/src/: thread-pool.c  util.h
a.yanin/common/executor/include/common/executor/: executor.h
a.yanin/common/executor/src/: executor.c
a.yanin/common/io/: meson.build
a.yanin/common/io/include/common/: io.h
a.yanin/common/io/src/: io.c
a.yanin/common/log/: meson.build
a.yanin/common/log/include/common/log/: log.h
a.yanin/common/log/src/: log.c
a.yanin/common/loop/: meson.build
a.yanin/common/loop/include/common/loop/: executor.h  io.h  loop.h  notify.h  pipe.h  tcp.h
a.yanin/common/loop/src/: executor.c  handler.c  io.c  io.h  loop.c  notify.c  pipe.c  tcp.c  util.h
a.yanin/common/memory.arc/: meson.build
a.yanin/common/memory.arc/include/common/memory/: arc.h
a.yanin/common/posix/: meson.build
a.yanin/common/posix.adapter/: meson.build
a.yanin/common/posix.adapter/include/common/posix/: adapter.h
a.yanin/common/posix.adapter/src/: adapter.c
a.yanin/common/posix/include/common/posix/: aio.h  error.h  file.h  io.h  ipc.h  mem.h  proc.h  signal.h  socket.h  time.h  tty.h
a.yanin/common/posix/src/: aio.c  dir.c  file.c  io.c  ipc.c  proc.c  socket.c  time.c
a.yanin/common/util.concat-token/: meson.build
a.yanin/common/util.concat-token/include/common/util/: concat-token.h
a.yanin/waxy/: meson.build  meson_options.txt
a.yanin/waxy/src/: cache.c  cache.h  client.c  client.h  executor-mt.c  executor-st.c  executor.h  gai-adapter.c  gai-adapter.h  main.c  server.c  server.h  upstream.c  upstream.h  url.c  url.h  util.c  util.h
common/: meson.build
common/collections.dlist/: meson.build
common/collections.slab/include/collections/: slab.h
common/collections.string/include/common/collections/: string.h
common/collections.string/src/: string.c
common/collections/include/common/: collections.h
common/io/: meson.build
common/io/include/common/: io.h
common/io/src/: io.c
common/posix/: meson.build
common/posix/include/common/posix/: dir.h  proc.h  time.h
common/posix/src/: io.c  mem.c  signal.c  time.c  tty.c
k.romanov/11/: lab11.c
k.romanov/14/: syncoutsem.c
k.romanov/6/: sleepsort.c
k.romanov/7/: copy.c  queue.c  queue.h
k.romanov/8/: pi.c
k.shadrin/: lab14.c  lab8.c
k.shadrin/11/: lab11.c
lab6/: lab6.c
lab_11/: lab11.c
(+156 files in other folders)
