project('common', 'c',
  default_options: ['warning_level=3', 'cpp_std=c17', 'werror=true', 'default_library=static'])

modules = {}

subdir('log')
subdir('error')
subdir('error.display')
subdir('util.concat-token')
subdir('collections')
subdir('collections.hash')
subdir('collections.vec')
subdir('collections.slab')
subdir('collections.string')
subdir('io')
subdir('posix')
