project('common', 'c',
  default_options: ['warning_level=3', 'c_std=c2x', 'werror=true', 'default_library=static'])

modules = {}

subdir('log')
subdir('error-codes')
subdir('error-codes.display')
subdir('util.concat-token')
subdir('collections')
subdir('collections.dlist')
subdir('collections.hash')
subdir('collections.vec')
subdir('collections.slab')
subdir('collections.string')
subdir('io')
subdir('posix')
subdir('error')
subdir('error-codes.adapter')
subdir('posix.adapter')
